--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,5 +1,9 @@
 .home {
   position: relative;
+  height: calc(100vh - 58px);
+  display: flex;
+  justify-content: center;
+  padding: 0px 20px;
 }
 
 .home::before {
@@ -15,4 +19,10 @@
   height: 100%;
   z-index: -1;
   background-size: cover;
+}
+
+.home-intro {
+  padding: 30px;
+  background-color: rgba(255, 255, 255, 0.677);
+  margin: auto;
 }
