--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -1,7 +1,6 @@
 .app header {
-  display: flex; 
-  justify-content: space-between;
-  align-items: center;
+  display: grid; 
+  grid-template-columns: repeat(6, minmax(0, 1fr));
   padding: 0.5rem;
   position: sticky;
   top: 0;
@@ -14,16 +13,18 @@
   font-size: 25px;
   font-weight: 400;
   text-decoration: none;
+  color: white;
+  grid-column: span 5 / span 5;
 }
 
 nav {
   display: flex;
-  justify-content: space-between;
+  justify-content: end;
   align-items: end;
   height: 100%;
 }
 
-.cartBtn {
+.cart-btn {
   position: relative;
   padding: 0.25rem;
   display: block;
@@ -49,21 +50,33 @@ nav {
   padding: 0.25rem;
 }
 
-.searchForm {
+.search-form, .small-screen-search-form {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   background-color: white;
   border-radius: 50px;
 }
 
-.searchForm input{
+.search-form input, .small-screen-search-form input{
   border: none;
-  border-radius: 50px;
-  width: 200px
+  border-radius: 50px 0px 0px 50px;
+  width: 200px;
 }
 
-.searchBtn {
-  background-color: rgb(255, 255, 179);
+.search-form input:focus, .small-screen-search-form input:focus {
+  outline: none;
+}
+
+.search-form {
+  display: none;
+}
+
+.small-screen-search-form {
+  grid-column: span 6 / span 6;
+}
+
+.search-btn {
+  background-color: rgb(160, 191, 157);
   border-radius: 100%;
   width: 40px;
   height: 40px;
@@ -73,8 +86,32 @@ nav {
   border: none;
 }
 
+.search-btn:hover {
+  background-color: rgb(136, 162, 133)
+}
+
 @media screen and (min-width: 450px) {
   #title {
   font-size: 35px;
+  }
+}
+
+@media screen and (min-width: 600px) {
+  .app header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  nav {
+    justify-content: space-between
+  }
+
+  .search-form {
+    display: flex;
+  }
+
+  .small-screen-search-form {
+    display: none;
   }
 }
