--- a/src/Components/SearchResults/SearchResults.css
+++ b/src/Components/SearchResults/SearchResults.css
@@ -19,6 +19,7 @@
   border-bottom: 1px solid rgb(208, 207, 207);
   border-top: none;
   box-sizing: border-box;
+  position: relative;
 }
 
 .single-result img {
@@ -30,6 +31,42 @@
 
 .single-result p {
   align-self: flex-start;
+}
+
+.extra {
+  display: none;
+}
+
+.add-cart-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  background-color: rgb(135, 189, 130);
+  border: none;
+  border-radius: 20px;
+  padding: 5px 10px;
+  font-size: medium;
+  position: absolute;
+  top: 0.1; 
+  right: 0;
+  overflow: hidden;
+  height: 40px;
+  width: 80px;
+  transition: width .6s ease-in-out, background-color .6s;
+
+  &:hover {
+    .extra {
+      text-wrap: nowrap;
+      display: inline;
+      padding-left: 3px;
+    }
+  }
+}
+
+.add-cart-btn:hover {
+  width: 150px;
+  background-color: rgb(95, 158, 88)
 }
 
 .view-more {
