--- a/src/Components/Cart/Cart.css
+++ b/src/Components/Cart/Cart.css
@@ -7,21 +7,39 @@
   max-width: 100%;
   background-color: white;
   z-index: 20;
-  transition: width 0.8s ease-in-out;
   overflow-x: hidden;
 }
 
 .open {
   display: block;
-  animation: openFull 0.8s ease-in-out forwards;
+  animation: open 0.1s ease-in-out forwards;
+  transition: width 0.1s ease-in-out;
 }
 
-@media screen and (min-width: 600px) {
-  .cart {
-    max-width: 400px;
+.close-cart-btn {
+  background-color: #00000000;
+  border: none;
+}
+
+.close-icon {
+  color: black;
+}
+
+.cart-top {
+  display: flex; 
+  justify-content: space-between;
+  align-items: center; 
+  border-bottom: 1px solid rgb(162, 160, 160);
+
+  p {
+    flex: 1;
+    text-align: center;
   }
-  .open {
-    animation: open 0.8s ease-in-out forwards;
+}
+
+@media screen and (min-width: 500px) {
+  .cart {
+    max-width: 500px;
   }
 }
 
@@ -31,7 +49,7 @@
   }
 
   100% {
-    width: 400px;
+    width: 500px;
   }
 }
 
