--- a/src/Components/Cart/Cart.css
+++ b/src/Components/Cart/Cart.css
@@ -16,15 +16,6 @@
   transition: width 0.1s ease-in-out;
 }
 
-.close-cart-btn {
-  background-color: #00000000;
-  border: none;
-}
-
-.close-icon {
-  color: black;
-}
-
 .cart-top {
   display: flex; 
   justify-content: space-between;
@@ -36,6 +27,44 @@
     text-align: center;
   }
 }
+
+.cart-item {
+  border-bottom: 1px solid rgb(202, 202, 202);
+  margin: 5px;
+  padding: 5px;
+  display: flex;
+  justify-content: space-between;
+  align-items: start;
+
+  img {
+    width: 80px;
+    height: 80px;
+    object-fit: cover
+  } 
+
+  p {
+    margin: 0px;
+  }
+}
+
+.item-btns {
+  display: flex; 
+  justify-content: flex-end;
+}
+
+.item-btns button, .item-description p {
+  margin: 1px 4px;
+}
+
+.item-description {
+  display: flex;
+}
+
+.item-count {
+  border: 1px solid black; 
+  border-radius: 5px;
+}
+
 
 @media screen and (min-width: 500px) {
   .cart {
