--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,10 @@ a {
   color: black;
 }
 
+.text-sm {
+  font-size: 16px;
+}
+
 .text-md {
   font-size: 18px;
 }
@@ -74,4 +78,8 @@ a {
   .icon {
     color: black;
   }
+}
+
+.flex {
+  display: flex;
 }
