--- a/src/Components/Confirmation/Confirmation.css
+++ b/src/Components/Confirmation/Confirmation.css
@@ -2,24 +2,60 @@
   padding: 10px;
   max-width: 600px;
   margin: 0px auto;
+}
 
-  p {
-    margin: 5px;
-  }
+.confirmation h3 {
+  font-weight: 400;
+}
+
+.title {
+  margin: 5px;
+  font-weight: 500;
+  margin-top: 15px;
 }
 
 .order-details {
   border: 1px solid rgb(202, 199, 199);
   padding: 10px;
-  display: grid;
-  grid-template-columns: repeat(3, minmax(0, 1fr));
+  display: flex;
+  flex-direction: column;
 }
 
 .info {
-  grid-column: span 2 / span 2;
-  font-weight: 500;
+  font-weight: 400;
+  margin: 5px;
+  margin-top: 0px;
 }
 
-.info :nth-child(2) {
+.info p {
   font-weight: 400;
+  margin: 2px 0px;
+}
+
+
+@media screen and (min-width: 600px) {
+  .order-details {
+    display: grid;
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .title {
+    margin: 5px;
+    font-weight: 400;
+  }
+  
+  .info{
+    grid-column: span 2 / span 2;
+    font-weight: 500;
+    margin: 5px;
+  }
+
+  .info p {
+    font-weight: 500;
+  }
+
+  .info :nth-child(2) {
+    font-weight: 400;
+  }
+
 }
