--- a/src/Components/Confirmation/Confirmation.css
+++ b/src/Components/Confirmation/Confirmation.css
@@ -32,6 +32,15 @@
   margin: 2px 0px;
 }
 
+.order-items {
+  border: 1px solid rgb(202, 199, 199);
+  padding: 10px;
+}
+
+.order-total {
+  justify-content: space-between;
+}
+
 
 @media screen and (min-width: 600px) {
   .order-details {
