Add suggestions for items to search when no search term present

--- a/src/Components/SearchResults/SearchResults.css
+++ b/src/Components/SearchResults/SearchResults.css
@@ -4,6 +4,10 @@
   grid-template-rows: repeat(2);
 }
 
+.search-placeholder {
+  display: inline-block;
+}
+
 .results {
   display: flex;
   flex-direction: column;
