--- a/src/Components/Cart/Cart.css
+++ b/src/Components/Cart/Cart.css
@@ -47,6 +47,14 @@
   background-color: rgb(95, 158, 88)
 }
 
+.empty-cart {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 80%;
+}
+
 
 @media screen and (min-width: 500px) {
   .cart {
